# jimdo-docs-mcp

./: .envrc.copy  .gitignore  AGENTS.md  README.md  generate_and_upload_embeddings.py  jimdo_docs.csv  main.py  pyproject.toml  scrape_jimdo_docs.py
